--- a/package.json
+++ b/package.json
@@ -7,6 +7,11 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "lint:fix": "next lint --fix",
+    "lint:strict": "next lint '*/**/*.{js,jsx,ts,tsx}'",
+
+    "format": "prettier --write .",
+    "prettier": "prettier --write */**/*.{js,jsx,json,ts,tsx,css,md}",
     "prepare": "husky"
   },
   "dependencies": {
