--- a/package.json
+++ b/package.json
@@ -9,20 +9,20 @@
     "lint": "next lint",
     "lint:fix": "next lint --fix",
     "lint:strict": "next lint '*/**/*.{js,jsx,ts,tsx}'",
-
     "format": "prettier --write .",
     "prettier": "prettier --write */**/*.{js,jsx,json,ts,tsx,css,md}",
     "prepare": "husky"
   },
   "dependencies": {
+    "next": "14.2.8",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.8"
+    "react-icons": "^5.3.0"
   },
   "devDependencies": {
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
     "eslint": "^8",
-    "eslint-config-next": "14.2.8"
+    "eslint-config-next": "14.2.8",
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1"
   }
 }
