--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@nextui-org/navbar": "^2.0.37",
     "next": "14.2.8",
     "react": "^18",
     "react-dom": "^18",
