--- a/package.json
+++ b/package.json
@@ -15,15 +15,19 @@
   },
   "dependencies": {
     "@nextui-org/navbar": "^2.0.37",
+    "@prisma/client": "^5.21.1",
     "next": "14.2.8",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0"
   },
   "devDependencies": {
+    "@types/node": "22.7.7",
+    "@types/react": "18.3.11",
     "eslint": "^8",
     "eslint-config-next": "14.2.8",
     "postcss": "^8",
+    "prisma": "^5.21.1",
     "tailwindcss": "^3.4.1"
   }
 }
