--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@nextui-org/navbar": "^2.0.37",
     "@prisma/client": "^5.21.1",
+    "lucide-react": "^0.453.0",
     "next": "14.2.8",
     "react": "^18",
     "react-dom": "^18",
