--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-icons": "^5.3.0"
   },
   "devDependencies": {
+    "@svgr/webpack": "^8.1.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.8",
     "postcss": "^8",
