--- a/package.json
+++ b/package.json
@@ -16,12 +16,15 @@
   "dependencies": {
     "@nextui-org/navbar": "^2.0.37",
     "@prisma/client": "^5.21.1",
+    "husky": "^9.1.6",
     "lucide-react": "^0.453.0",
     "next": "14.2.8",
     "react": "^18",
     "react-animated-numbers": "^0.18.0",
     "react-dom": "^18",
-    "react-icons": "^5.3.0"
+    "react-icons": "^5.3.0",
+    "react-scroll": "^1.9.0",
+    "smooth-scroll": "^16.1.3"
   },
   "devDependencies": {
     "@types/node": "22.7.7",
